90% done with carousel wooo fixed indicators

--- a/index.html
+++ b/index.html
@@ -78,94 +78,110 @@
               <div class="carousel-content-container">
                 <a href="lessons.html">
                   <div class="carousel-text">
-                    <p class="lessonBox_title">Is it Private Information?</p>
-                    <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
+                    <h3 class="module-title">Is it Private Information?</h3>
+                    <p>This module teaches what is safe to share with different
+                      social media audiences and what kind of information is
+                      inappropriate to share on social media.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
                   </div>
-                  <div id="home_SelfPres" class="LL_img" ></div>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+                  </div>
                 </a>
               </div>
             </div>
             <!-- one -->
             <div class="carousel-item">
+              <div class="carousel-content-container">
+                <a href="lessons.html">
+                  <div class="carousel-text">
+                    <h3 class="module-title">Shaping Your Digital Footprint</h3>
+                    <p>This module teaches how actions on social media create a
+                       digital footprint and skills to positively shape digital
+                       footprints.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
+                  </div>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+                  </div>
+                </a>
+              </div>
             </div>
             <!-- two -->
             <div class="carousel-item">
+              <div class="carousel-content-container">
+                <a href="lessons.html">
+                  <div class="carousel-text">
+                    <h3 class="module-title">Upstanding to Cyberbullying</h3>
+                    <p>This module teaches how to detect signs of cyberbullying
+                      and how to respond when seeing cyberbullying happening to
+                      others.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
+                  </div>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+                  </div>
+                </a>
+              </div>
             </div>
             <!-- three -->
             <div class="carousel-item">
+              <div class="carousel-content-container">
+                <a href="lessons.html">
+                  <div class="carousel-text">
+                    <h3 class="module-title">Online Identities</h3>
+                    <p>This module teaches how to manage self-presentation and
+                      how online identities can change with different audiences
+                       on social media.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
+                  </div>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+                  </div>
+                </a>
+              </div>
             </div>
             <!-- four -->
             <div class="carousel-item">
+              <div class="carousel-content-container">
+                <a href="lessons.html">
+                  <div class="carousel-text">
+                    <h3 class="module-title">Social Media Privacy</h3>
+                    <p>This module teaches how social media sites collect
+                      information about users and offers strategies for
+                      protecting privacy on social media.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
+                  </div>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+                  </div>
+                </a>
+              </div>
             </div>
             <!-- five -->
             <div class="carousel-item">
-            </div>
-          </div>
-        </div>
-        <!--
-
-            <div class="item active">
               <div class="carousel-content-container">
                 <a href="lessons.html">
-                  <div id="home_SelfPres" class="LL_img" ></div>
                   <div class="carousel-text">
-                    <p class="lessonBox_title">Is it Private Information?</p>
-                    <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
+                    <h3 class="module-title">News in Social Media</h3>
+                    <p>This module teaches why fake news exists and how to
+                      identify the telltale signs of fake news on social media.</p>
+                    <button class="module-button" type="button" onclick="window.
+                    location.href = 'lessons.html';"><span id="button-text">
+                      Launch</span></button>
                   </div>
-                </a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-content-container">
-                <a href="lessons.html">
-                  <div id="home_DigitalFoot" class="LL_img"></div>
-                  <div class="carousel-text">
-                    <p class="lessonBox_title">Shaping Your Digital Footprint</p>
-                    <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-content-container">
-                <a href="lessons.html">
-                  <div id="home_CyberBullying" class="LL_img"></div>
-                  <div class="carousel-text">
-                    <p class="lessonBox_title">Upstanding to Cyberbullying</p>
-                    <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-content-container">
-                <a href="lessons.html">
-                  <div id="home_Presentation" class="LL_img"></div>
-                  <div class="carousel-text">
-                    <p class="lessonBox_title">Online Identities</p>
-                    <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-content-container">
-                <a href="lessons.html">
-                  <div id="home_Privacy" class="LL_img"></div>
-                  <div class="carousel-text">
-                    <p class="lessonBox_title">Social Media Privacy</p>
-                    <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="carousel-content-container">
-                <a href="lessons.html">
-                  <div id="home_NewsLit" class="LL_img"></div>
-                  <div class="carousel-text">
-                    <p class="lessonBox_title">News in Social Media</p>
-                    <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
+                  <div class="module-image">
+                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
                   </div>
                 </a>
               </div>
@@ -179,8 +195,8 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        </div> -->
-    </div>
+        </div>
+      </div>
   </div>
 
   <div class="customClass">
