temp error state for About

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- THIS IS NOT USED ANYWHERE -->
 <!-- <div class="topnav">
-  <div id="logoCont">
+  <div id="logo-container">
     <a id="logo" href="index.html">Social TestDrive</a>
   </div>
 
@@ -15,7 +15,7 @@
 </div> -->
 
 <div class="header-container">
-  <div id="logoCont">
+  <div id="logo-container">
     <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
     <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
   </div>
