--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <div class="header-container">
-    <div id="logoCont">
+    <div id="logo-container">
       <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
