--- a/lessons/cyberbullying.html
+++ b/lessons/cyberbullying.html
@@ -10,7 +10,7 @@
     </head>
     <body>
       <div class="topnav">
-        <div id="logoCont">
+        <div id="logo-container">
         <a id="logo" href="../index.html"><img src="../img/logo.png" alt="logo">   Social Media TestDrive</a>
         </div>
         <div id="linksCont">
