added footer & styling, renamed lessons.html to modules.html

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </div>
     <div class="navbar-container">
       <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
