--- a/for_parents.html
+++ b/for_parents.html
@@ -45,7 +45,7 @@
         <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
           <p>Absolutely!</p>
           <p>All TestDrive modules are designed so that children can complete them by themselves, but we encourage parents to try out and discuss TestDrive with their children. The reflection questions at the end of each module are a great opportunity to have a deeper discussion of the material.</p>
-          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/lessons.html">modules</a> yourself.</p>
+          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/modules.html">modules</a> yourself.</p>
         <p class="lessonsubheader">How does a TestDrive module work?</p>
           <p>In a TestDrive module, young people first learn key terms and practice social media skills in a guided setting. Then, they explore a simulated social media site where they interact with content designed to provide opportunities to further practice their new social media skills. The final section in the module is a reflection activity where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</p>
         <p class="lessonsubheader">How can I see my child’s progress?</p>
