--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
@@ -39,7 +40,7 @@
     </div>
     <div class="navbar-container">
       <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
@@ -51,7 +52,7 @@
       <div id="intro">
         <h1>Practice digital literacy through a <span class="gold_accent">social media simulation</span>.</h1>
         <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
-        <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Modules </button>
+        <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
       </div>
       <div id="home_graphic">
         <img id="home_img" src="img/home.png" alt="home graphic">
@@ -76,14 +77,14 @@
             <!-- zero -->
             <div class="carousel-item active">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Is it Private Information?</h3>
                     <p>This module teaches what is safe to share with different
                       social media audiences and what kind of information is
                       inappropriate to share on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -95,14 +96,14 @@
             <!-- one -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Shaping Your Digital Footprint</h3>
                     <p>This module teaches how actions on social media create a
                        digital footprint and skills to positively shape digital
                        footprints.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -114,14 +115,14 @@
             <!-- two -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Upstanding to Cyberbullying</h3>
                     <p>This module teaches how to detect signs of cyberbullying
                       and how to respond when seeing cyberbullying happening to
                       others.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -133,14 +134,14 @@
             <!-- three -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Online Identities</h3>
                     <p>This module teaches how to manage self-presentation and
                       how online identities can change with different audiences
                        on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -152,14 +153,14 @@
             <!-- four -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Social Media Privacy</h3>
                     <p>This module teaches how social media sites collect
                       information about users and offers strategies for
                       protecting privacy on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -171,13 +172,13 @@
             <!-- five -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">News in Social Media</h3>
                     <p>This module teaches why fake news exists and how to
                       identify the telltale signs of fake news on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -199,19 +200,10 @@
       </div>
   </div>
 
-  <div class="customClass">
-    <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p></a></div>
-    <div class="footCont_links">
-      <a class="footerlinks" href="terms.html"><p>Terms & Copyright</p></a>
-      <a class="footerlinks" href="faq.html"><p>FAQs</p></a>
-      <!-- <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-      <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
-      <a class="footerlinks" href="lessons.html"><p>Modules</p></a>
-      <a class="footerlinks" href="about.html"><p>About</p></a> -->
-    </div>
-  </div>
-
-
+  <footer class="footer">
+    <p id="footer-text">Social Media TestDrive</p>
+    <a id="footer-links" href="terms.html">Terms & Copyright</p>
+  </footer>
 
   <!--<script src="nav.js"></script>-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
