--- a/lessons/cyberbullying.html
+++ b/lessons/cyberbullying.html
@@ -15,7 +15,7 @@
         </div>
         <div id="linksCont">
           <a class="links" href="../about.html"><p>About</p></a>
-          <a class="links" href="../lessons.html"><p>Lessons</p></a>
+          <a class="links" href="../modules.html"><p>Lessons</p></a>
           <a class="links" href="../for_educators.html"><p>For Educators</p></a>
           <a class="links" href="../for_parents.html"><p>For Parents</p></a>
           <a class="links" href="../team.html"><p>The Team</p></a>
@@ -107,7 +107,7 @@
           <a class="footerlinks" href="../team.html"><p>The Team</p></a>
           <a class="footerlinks" href="../for_parents.html"><p>For Parents</p></a>
           <a class="footerlinks" href="../for_educators.html"><p>For Educators</p></a>
-          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../modules.html"><p>Lessons</p></a>
           <a class="footerlinks" href="../about.html"><p>About</p></a>
         </div>
       </div>
