--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
 
   <div id="linksCont">
     <a class="links" href="html/about.html"><p>About</p></a>
-    <a class="links" href="html/lessons.html"><p>Modules</p></a>
+    <a class="links" href="html/modules.html"><p>Modules</p></a>
     <a class="links" href="html/for_educators.html"><p>For Educators</p></a>
     <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
     <a class="links" href="html/faq.html"><p>FAQs</p><a>
@@ -21,7 +21,7 @@
   </div>
   <div class="navbar-container">
     <a class="navbar-links" href="about.html"><p>About</p></a>
-    <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+    <a class="navbar-links" href="modules.html"><p>Modules</p></a>
     <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
     <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
     <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
