--- a/modules.html
+++ b/modules.html
@@ -19,7 +19,7 @@
         <meta name='twitter:title' content="Social Media TestDrive">
         <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
         <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-        <meta property='og:url' content='https://socialmediatestdrive.org/lessons.html'>
+        <meta property='og:url' content='https://socialmediatestdrive.org/modules.html'>
         <meta property='og:title' content="Social Media TestDrive">
         <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
         <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
