header stylings & sticky footer

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/about.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
@@ -32,19 +33,19 @@
 </head>
 <body>
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
-  <div class="header-container">
+  <header>
     <div id="logo-container">
       <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
       <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
+      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
-  </div>
+  </header>
   <h2 class="error">Whoops, this page isn't built out yet!
     Navigate back to Home.</h2>
 
@@ -82,6 +83,10 @@
 
   <div id="bottomNav"></div>
   <script src="nav.js"></script> -->
+  <footer class="footer">
+    <p id="footer-text">Social Media TestDrive</p>
+    <a id="footer-links" href="terms.html">Terms & Copyright</p>
+  </footer>
 
 </body>
 </html>
