replace lessons.html with modules.html

--- a/about.html
+++ b/about.html
@@ -40,12 +40,13 @@
     </div>
     <div class="navbar-container">
       <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
   </header>
+  <main>
   <h2 class="error">Whoops, this page isn't built out yet!
     Navigate back to Home.</h2>
 
@@ -83,6 +84,7 @@
 
   <div id="bottomNav"></div>
   <script src="nav.js"></script> -->
+  </main>
   <footer class="footer">
     <p id="footer-text">Social Media TestDrive</p>
     <a id="footer-links" href="terms.html">Terms & Copyright</p>
