--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="navbar-container">
       <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="lessons.html"><p>Modules</p></a>
+      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
       <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
       <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
@@ -53,7 +53,7 @@
       <div id="intro">
         <h1>Practice digital literacy through a <span class="gold_accent">social media simulation</span>.</h1>
         <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
-        <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Modules </button>
+        <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
       </div>
       <div id="home_graphic">
         <img id="home_img" src="img/home.png" alt="home graphic">
@@ -78,14 +78,14 @@
             <!-- zero -->
             <div class="carousel-item active">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Is it Private Information?</h3>
                     <p>This module teaches what is safe to share with different
                       social media audiences and what kind of information is
                       inappropriate to share on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -97,14 +97,14 @@
             <!-- one -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Shaping Your Digital Footprint</h3>
                     <p>This module teaches how actions on social media create a
                        digital footprint and skills to positively shape digital
                        footprints.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -116,14 +116,14 @@
             <!-- two -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Upstanding to Cyberbullying</h3>
                     <p>This module teaches how to detect signs of cyberbullying
                       and how to respond when seeing cyberbullying happening to
                       others.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -135,14 +135,14 @@
             <!-- three -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Online Identities</h3>
                     <p>This module teaches how to manage self-presentation and
                       how online identities can change with different audiences
                        on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -154,14 +154,14 @@
             <!-- four -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">Social Media Privacy</h3>
                     <p>This module teaches how social media sites collect
                       information about users and offers strategies for
                       protecting privacy on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
@@ -173,13 +173,13 @@
             <!-- five -->
             <div class="carousel-item">
               <div class="carousel-content-container">
-                <a href="lessons.html">
+                <a href="modules.html">
                   <div class="carousel-text">
                     <h3 class="module-title">News in Social Media</h3>
                     <p>This module teaches why fake news exists and how to
                       identify the telltale signs of fake news on social media.</p>
                     <button class="module-button" type="button" onclick="window.
-                    location.href = 'lessons.html';"><span id="button-text">
+                    location.href = 'modules.html';"><span id="button-text">
                       Launch</span></button>
                   </div>
                   <div class="module-image">
