--- a/modules.html
+++ b/modules.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<html>
+
+<!-- <html>
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -84,4 +84,4 @@
       <div id="bottomNav"></div>
       <script src="nav.js"></script>
     </body>
-</html>
+</html> -->
