fixed navbar styling, standardizing text styles pt 2, small fixes

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
-      <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
-      <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
-      <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
+      <a class="navbar-links" href="about.html">About</a>
+      <a class="navbar-links" href="modules.html">Modules</a>
+      <a class="navbar-links" href="for_educators.html">For Educators</a>
+      <a class="navbar-links" href="for_parents.html">For Parents</a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
   </header>
@@ -62,8 +62,8 @@
 
     <div class="section2">
       <h1>Learn Essential Skills</h1>
-      <h2 id="modulePromo">Our modules are designed to teach youth about skills for entering
-      social media. Check out a few below!</h2>
+      <p class="caption">Our modules are designed to teach youth about skills for entering
+      social media. Check out a few below!</p>
         <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
