--- a/about.html
+++ b/about.html
@@ -39,16 +39,16 @@
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
-      <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
-      <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
-      <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
+      <a class="navbar-links" href="about.html">About</a>
+      <a class="navbar-links" href="modules.html">Modules</a>
+      <a class="navbar-links" href="for_educators.html">For Educators</a>
+      <a class="navbar-links" href="for_parents.html">For Parents</a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
   </header>
   <main>
-  <h2 class="error">Whoops, this page isn't built out yet!
-    Navigate back to Home.</h2>
+  <p class="error">Whoops, this page isn't built out yet!
+    Navigate back to Home.</p>
 
   <!-- <div id="topNav"></div>
   <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
