--- a/modules.html
+++ b/modules.html
@@ -31,20 +31,23 @@
       <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
     </div>
     <div class="navbar-container">
-      <a class="navbar-links" href="about.html"><p>About</p></a>
-      <a class="navbar-links" href="modules.html"><p>Modules</p></a>
-      <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
-      <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
+      <a class="navbar-links" href="about.html">About</a>
+      <a class="navbar-links" href="modules.html">Modules</a>
+      <a class="navbar-links" href="for_educators.html">For Educators</a>
+      <a class="navbar-links" href="for_parents.html">For Parents</a>
       <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
     </div>
   </header>
   <main>
+    <h1>Learn Through Practice</h1>
+    <p class="caption">Check out the modules below to see what kinds of digital
+       citizenship skills we teach. </p>
     <div class="modules_container">
      <a href="https://app.socialmediatestdrive.org/intro/cyberbullying">
        <div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
         <div class="Bottom_TextHalf">
-          <p class="">How to Be an Upstander</p>
+          <p class="lessonBox_title">How to Be an Upstander</p>
           <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
           </p>
@@ -55,7 +58,7 @@
      <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_Info"></div>
         <div class="Bottom_TextHalf">
-          <p class="">Is it Private Information?</p>
+          <p class="lessonBox_title">Is it Private Information?</p>
           <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
           </p>
@@ -64,7 +67,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/digfoot"><div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
         <div class="Bottom_TextHalf">
-          <p class="">Shaping Your Digital Footprint</p>
+          <p class="lessonBox_title">Shaping Your Digital Footprint</p>
           <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
         </div>
@@ -72,7 +75,7 @@
       <a href="https://app.socialmediatestdrive.org/intro/presentation"><div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_Online"></div>
         <div class="Bottom_TextHalf">
-          <p class="">Online Identities</p>
+          <p class="lessonBox_title">Online Identities</p>
           <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
           </p>
@@ -81,7 +84,7 @@
       <a href="https://app.socialmediatestdrive.org/intro/privacy"><div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_Privacy"></div>
         <div class="Bottom_TextHalf">
-          <p class="">Social Media Privacy</p>
+          <p class="lessonBox_title">Social Media Privacy</p>
           <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
         </div>
@@ -89,7 +92,7 @@
          <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="moduleBox">
         <div class="Top_PicHalf" id="lesson_News"></div>
         <div class="Bottom_TextHalf">
-          <p class="">News in Social Media</p>
+          <p class="lessonBox_title">News in Social Media</p>
           <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
           <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
           </p>
